add header style and content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
   <title>WAWE</title>
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header__top">
+        <nav class="nav">
+          <div class="nav__logo">
+            <a href="#!"><img src="./img/header/header-logo.svg" alt="logo" class="logo"></a>
+          </div>
+          <ul class="nav__list">
+            <li><a href="#!" class="active">О нас</a></li>
+            <li><a href="#!">Услуги</a></li>
+            <li><a href="#!">Стоимость</a></li>
+            <li><a href="#!">Блог</a></li>
+            <li><a href="#!">Команда</a></li>
+            <li><a href="#!">Контакты</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="header__content">
+        <h1 class="header__title">WAWE</h1>
+        <div class="header__text">
+          <p>Школа серфинга на канарских Островах</p>
+        </div>
+
+      </div>
+      <div class="header__button">
+        <a href="#!"><img src="./img/header/header-vector.svg" alt="vector"></a>
+      </div>
+    </div>
+  </header>
+  
   
   <script src="./js/main.js"></script>
 </body>
